--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1,
@@ -74,41 +75,33 @@ img {
 /* ===================== HEADER =====================*/
 
 .header-container {
+  /* display: flex;
+  align-items: center; */
+  padding: 16px 16px;
+}
+
+.title-wrapper {
   display: flex;
   align-items: center;
-  padding: 10px 0;
+  gap: 8px;
 }
 
-.page-nav {
-  display: flex;
-  align-items: center;
-}
+.title {
+  color: var(--ORANGE, #f07f2e);
 
-.logo-link {
-  margin-right: 100px;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.header-btn {
-  margin-left: auto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 166.667% */
+  letter-spacing: 0.5px;
 }
 /* ===================== /HEADER =====================*/
 
 /* ===================== HERO =====================*/
 
 .hero-container {
-  padding: 150px 0;
-  text-align: center;
+  padding: 16px 0;
   background-color: aliceblue;
-}
-
-.hero-title {
-  margin-bottom: 30px;
 }
 
 /* ===================== /HERO =====================*/
@@ -135,9 +128,8 @@ img {
 /* ===================== /FOOTER =====================*/
 
 .footer-container {
-  padding: 50px 0;
-  text-align: center;
-  background-color: aliceblue;
+  padding: 16px 16px;
+  background-color: #ecf6ff;
 }
 
 /* ===================== /FOOTER =====================*/
