--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,11 @@ img {
 }
 
 .container {
-  width: 1200px;
+  width: 1128px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 /* ===================== /UTILITES =====================*/
@@ -100,8 +100,54 @@ img {
 /* ===================== HERO =====================*/
 
 .hero-container {
-  padding: 16px 0;
-  background-color: aliceblue;
+  padding: 0;
+  /* background-color: aliceblue; */
+}
+
+.hero-images-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 24px;
+}
+
+.hero-img {
+  border-radius: 16px;
+}
+
+.hero-img-1 {
+  position: relative;
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+.hero-img-2 {
+  position: relative;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.hero-img-3 {
+  position: relative;
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.hero-img-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 24px 48px;
+  border-radius: 0 0 16px 16px;
+  background: var(--common-black, rgba(47, 47, 55, 0.4));
+}
+
+.hero-img-title p {
+  color: var(--common-white, #fff);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px; /* 140% */
+  letter-spacing: 0.5px;
 }
 
 /* ===================== /HERO =====================*/
