--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,108 @@ img {
 
 /* ===================== /HERO =====================*/
 
+.main {
+  display: flex;
+  gap: 24px;
+  padding-top: 80px;
+}
+
+/* ===================== ARTICLES =====================*/
+
+.articles-container {
+  padding: 0;
+}
+
+.article {
+  display: grid;
+  grid-template-columns: 264px 456px;
+  gap: 24px;
+  padding-bottom: 36px;
+}
+
+.article-img {
+  border-radius: 16px;
+}
+
+.article-title {
+  color: var(--GREY, #2c2c2c);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px; /* 140% */
+  letter-spacing: 0.5px;
+  margin-bottom: 12px;
+}
+
+.article-text {
+  color: var(--GREY, #2c2c2c);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.5px;
+}
+
+/* ===================== /ARTICLES =====================*/
+
+/* ===================== SOCIAL =====================*/
+.social-title {
+  color: var(--GREY, #2c2c2c);
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 36px; /* 128.571% */
+  letter-spacing: 0.5px;
+  margin-bottom: 24px;
+}
+
+.social-list {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: 168px 168px;
+}
+
+.social-item {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  border-radius: 16px;
+}
+
+.social-icon {
+  border: 1px solid #2f2f37;
+  padding: 8px;
+  border-radius: 8px;
+}
+
+.social-link {
+  display: flex;
+  gap: 36px;
+  align-items: center;
+  margin: 0;
+  color: var(--common-black, #2f2f37);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.5px;
+}
+.instagram {
+  background-color: #d8def8;
+}
+.youtube {
+  background-color: #fae8ea;
+}
+.facebook {
+  background-color: #ffe8f1;
+}
+.github {
+  background-color: #fffddc;
+}
+.tiktok {
+  background-color: #e9f9f8;
+}
+.twitter {
+  background-color: #f2eef8;
+}
+/* ===================== /SOCIAL =====================*/
+
 /* ===================== SECTION =====================*/
 
 .section-container {
