--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,21 @@
+:root {
+  --common-white: #fff;
+  --orange: #f07f2e;
+  --grey: #2c2c2c;
+  --common-black: #2f2f37;
+  --blue-light: #ecf6ff;
+  --navy: #d8def8;
+  --scarlet: #fae8ea;
+  --yellow: #fffddc;
+  --pink: #ffe8f1;
+  --turquoise: #e9f9f8;
+  --lilac: #f2eef8;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  letter-spacing: 0.5px;
 }
 
 h1,
@@ -26,8 +42,13 @@ button {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
+}
+
+a {
+  text-decoration: none;
+  display: block;
 }
 
 /* ===================== /UTILITES =====================*/
@@ -42,42 +63,18 @@ img {
 }
 
 .container {
-  width: 1128px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 16px;
-  padding-right: 16px;
+  max-width: 1160px;
+  min-width: 320px;
+  margin: auto;
+  padding: 0 16px;
 }
 
 /* ===================== /UTILITES =====================*/
 
-/* ===================== COMPONENTS =====================*/
-
-.btn {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 8px 16px;
-  background-color: rgb(73, 153, 233);
-  border: transparent;
-  font-size: 18px;
-  font-weight: 600;
-  color: white;
-  border-radius: 5px;
-}
-
-.btn svg {
-  fill: currentColor;
-}
-
-/* ===================== /COMPONENTS =====================*/
-
 /* ===================== HEADER =====================*/
 
 .header-container {
-  /* display: flex;
-  align-items: center; */
-  padding: 16px 16px;
+  padding: 16px;
 }
 
 .title-wrapper {
@@ -87,88 +84,123 @@ img {
 }
 
 .title {
-  color: var(--ORANGE, #f07f2e);
-
+  color: var(--orange);
   font-size: 24px;
-  font-style: normal;
   font-weight: 700;
   line-height: 40px; /* 166.667% */
-  letter-spacing: 0.5px;
 }
 /* ===================== /HEADER =====================*/
 
 /* ===================== HERO =====================*/
 
 .hero-container {
-  padding: 0;
-  /* background-color: aliceblue; */
+  margin-bottom: 80px;
 }
 
-.hero-images-wrapper {
+.hero-list {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 24px;
+  grid-template-columns: 1fr;
+  gap: 12px;
 }
 
-.hero-img {
+/* .hero-img {
+  border-radius: 16px;
+} */
+
+.hero-item {
+  position: relative;
+  overflow: hidden;
   border-radius: 16px;
 }
 
-.hero-img-1 {
-  position: relative;
+.hero-item:first-child {
   grid-column: 1/2;
   grid-row: 1/3;
 }
 
-.hero-img-2 {
-  position: relative;
-  grid-column: 2/3;
-  grid-row: 1/2;
+@media only screen and (min-width: 768px) {
+  .hero-list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+    align-items: start;
+  }
 }
 
-.hero-img-3 {
-  position: relative;
-  grid-column: 2/3;
-  grid-row: 2/3;
-}
-
-.hero-img-title {
+.overlay {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 24px 48px;
+  width: 100%;
+  padding: 12px 20px;
   border-radius: 0 0 16px 16px;
-  background: var(--common-black, rgba(47, 47, 55, 0.4));
+  background: rgba(47, 47, 55, 0.5);
 }
 
-.hero-img-title p {
-  color: var(--common-white, #fff);
+@media (min-width: 1160px) {
+  .overlay {
+    padding: 24px 48px;
+  }
+}
+
+.hero-img-title {
+  color: var(--common-white);
   font-size: 20px;
   font-weight: 700;
-  line-height: 28px; /* 140% */
-  letter-spacing: 0.5px;
+  line-height: 28px;
 }
 
 /* ===================== /HERO =====================*/
 
-.main {
-  display: flex;
-  gap: 24px;
-  padding-top: 80px;
+.longread {
+  display: grid;
+  gap: 96px;
+}
+
+@media (min-width: 1160px) {
+  .longread {
+    grid-template-areas:
+      'a a s'
+      'a a v'
+      'a a .';
+    gap: 60px 24px;
+  }
+
+  .articles-container {
+    grid-area: a;
+  }
+
+  .social-container {
+    grid-area: s;
+  }
+
+  .video-container {
+    grid-area: v;
+  }
 }
 
 /* ===================== ARTICLES =====================*/
 
 .articles-container {
-  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 48px;
 }
 
 .article {
   display: grid;
-  grid-template-columns: 264px 456px;
+  grid-template-columns: 1fr;
   gap: 24px;
-  padding-bottom: 36px;
+}
+
+@media only screen and (min-width: 768px) {
+  .articles-container {
+    gap: 36px;
+  }
+
+  .article {
+    grid-template-columns: 264px 1fr;
+    gap: 24px;
+  }
 }
 
 .article-img {
@@ -176,7 +208,7 @@ img {
 }
 
 .article-title {
-  color: var(--GREY, #2c2c2c);
+  color: var(--grey);
   font-size: 20px;
   font-weight: 700;
   line-height: 28px; /* 140% */
@@ -185,7 +217,7 @@ img {
 }
 
 .article-text {
-  color: var(--GREY, #2c2c2c);
+  color: var(--grey);
   font-size: 16px;
   font-weight: 400;
   line-height: 24px; /* 150% */
@@ -195,8 +227,9 @@ img {
 /* ===================== /ARTICLES =====================*/
 
 /* ===================== SOCIAL =====================*/
+
 .social-title {
-  color: var(--GREY, #2c2c2c);
+  color: var(--grey);
   font-size: 28px;
   font-weight: 700;
   line-height: 36px; /* 128.571% */
@@ -206,78 +239,87 @@ img {
 
 .social-list {
   display: grid;
-  gap: 24px;
-  grid-template-columns: 168px 168px;
+  gap: 24px 8px;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media (min-width: 768px) {
+  .socials-list {
+    gap: 24px;
+  }
 }
 
 .social-item {
-  display: flex;
-  align-items: center;
-  padding: 8px;
   border-radius: 16px;
 }
 
 .social-icon {
-  border: 1px solid #2f2f37;
-  padding: 8px;
+  border: 1px solid var(--common-black);
+  padding: 4px;
   border-radius: 8px;
 }
 
 .social-link {
-  display: flex;
-  gap: 36px;
+  display: grid;
+  grid-template-columns: 32px 1fr;
   align-items: center;
+  justify-items: center;
+  padding: 8px;
   margin: 0;
-  color: var(--common-black, #2f2f37);
+
+  color: var(--common-black);
   font-size: 16px;
   font-weight: 400;
   line-height: 24px; /* 150% */
   letter-spacing: 0.5px;
 }
+
 .instagram {
-  background-color: #d8def8;
+  background-color: var(--navy);
 }
 .youtube {
-  background-color: #fae8ea;
+  background-color: var(--scarlet);
 }
 .facebook {
-  background-color: #ffe8f1;
+  background-color: var(--pink);
 }
 .github {
-  background-color: #fffddc;
+  background-color: var(--yellow);
 }
 .tiktok {
-  background-color: #e9f9f8;
+  background-color: var(--turquoise);
 }
 .twitter {
-  background-color: #f2eef8;
+  background-color: var(--lilac);
 }
+
 /* ===================== /SOCIAL =====================*/
 
-/* ===================== SECTION =====================*/
+/* ===================== VIDEO =====================*/
 
-.section-container {
-  padding: 100px 0;
-  text-align: center;
+.video-title {
+  margin-bottom: 24px;
+  color: var(--grey);
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 36px; /* 128.571% */
+  letter-spacing: 0.5px;
 }
 
-.section-title {
-  margin-bottom: 30px;
-}
-
-.icons-list {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-}
-
-/* ===================== /SECTION =====================*/
+/* ===================== /VIDEO =====================*/
 
 /* ===================== /FOOTER =====================*/
 
 .footer-container {
   padding: 16px 16px;
-  background-color: #ecf6ff;
+  background-color: var(--blue-light);
+  margin-top: 96px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-container {
+    margin-top: 80px;
+  }
 }
 
 /* ===================== /FOOTER =====================*/
